ex2.03/manifests/endpoint.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: pingpong
  name: hash-pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash-pingpong
  template:
    metadata:
      labels:
        app: hash-pingpong
    spec:
      containers:
        - name: server
          image: maxmynter/devopsk8s-node-endpoint@sha256:310aba28e8aa9c06ec4dfc4f035db217e585aa675b7aaf3b72743278f2088558
---
apiVersion: v1
kind: Service
metadata:
  namespace: pingpong
  name: server-svc
spec:
  type: ClusterIP
  selector:
    app: hash-pingpong
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
