ex2.03/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pingpong
  name: hash-pingpong-ing
spec:
  rules:
    - http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: server-svc
              port:
                number: 3000
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 3001
